# knowledgeforge

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  app.py  findings.md  package-lock.json  package.json  progress.md  pyproject.toml  requirements.txt  task_plan.md
agent/: __init__.py  base.py
agent/InsightEngine/: __init__.py  agent.py
agent/MediaEngine/: agent.py
agent/QueryEngine/: __init__.py  agent.py
docs/: 流程图.excalidraw  流程执行文档.md  知识库文件架构设计.md  知识文档格式规范.md  项目需求.md
docs/design-paradigms/: agent-architecture.md
docs/learning_coach_在线资源说明包/: README.md  learning_coach_在线资源获取代码与逻辑说明.md
knowledgeforge/: __init__.py  api.py  config.py  models.py
scripts/: build_source_priority_query_queue.py  check_csdn_source.py  check_runoob_source.py  check_tencent_cloud_source.py  check_zh_wikipedia_source.py  check_zhihu_search_source.py  experiment_expand_graph_node.py  simulate_query_task.py  test_llm_available.py  test_single_engines.py
tests/: conftest.py  test_agent_browser_live.py  test_browser_fallbacks.py  test_completeness_source_gate.py  test_dashboard.py  test_engine_plans.py  test_graph_client.py  test_integration_layers.py  test_knowledge_blueprint.py  test_media_engine.py  test_ml_regression.py  test_multi_provider_search.py  test_openai_compatible.py  test_quality_source_checks.py  test_query_engine.py  test_realtime_reviewer.py  test_source_probe_scripts.py  test_source_relevance_filter.py  test_supplement_decision.py  test_task_queue.py  test_token_usage.py  test_workflow.py  test_writer_dynamic_status.py
(+154 files in other folders)
