[project]
name = "knowledgeforge"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "langgraph>=1.1.9",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["knowledgeforge", "agent"]
